--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h2 id="sidebar__logo">Data Types</h2>
 			<ul class="sidebar__menu">
 				<li class="sidebar__item">
-					<a href="/" class="sidebar__links">Stress/Strain</a>
+					<a href="home.html" class="sidebar__links">Stress/Strain</a>
 				</li>
 				<li class="sidebar__item">
 					<a href="uts.html" class="sidebar__links">Ultimate Tensile Strength</a>
